<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".adapter.Adapter_Repositorio">

    <TextView
        android:id="@+id/textView_nome_repositorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:maxLines="1"
        android:textColor="@color/challenge_blue_card_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/repository_name" />

    <TextView
        android:id="@+id/textView_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nome_repositorio"
        tools:text="@string/description" />

    <ImageView
        android:id="@+id/fork_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/margin_default"
        android:contentDescription="@string/icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_descricao"
        app:srcCompat="@drawable/ic_call_split_orange_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView_forks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/desafio_dourado"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fork_icon"
        app:layout_constraintStart_toEndOf="@+id/fork_icon"
        app:layout_constraintTop_toTopOf="@+id/fork_icon"
        tools:text="000" />

    <ImageView
        android:id="@+id/repo_star_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintBottom_toBottomOf="@+id/textView_forks"
        app:layout_constraintStart_toEndOf="@+id/textView_forks"
        app:layout_constraintTop_toTopOf="@+id/textView_forks"
        app:srcCompat="@drawable/ic_star_orange_24dp"
        tools:ignore="VectorDrawableCompat"
        tools:text="000" />

    <TextView
        android:id="@+id/textView_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/desafio_dourado"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/repo_star_icon"
        app:layout_constraintStart_toEndOf="@+id/repo_star_icon"
        app:layout_constraintTop_toTopOf="@+id/repo_star_icon"
        tools:text="000" />

    <ImageView
        android:id="@+id/imageView_user"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/challenge_blue_card_title"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView_user"
        tools:text="username" />

    <TextView
        android:id="@+id/textView_nome_sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
        tools:text="@string/mock_full_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69" />

</androidx.constraintlayout.widget.ConstraintLayout>